--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -192,6 +192,16 @@ cmd_as_o_S       = $(CC) $(a_flags) -c -o $@ $<
 $(obj)/%.o: $(src)/%.S FORCE
 	$(call if_changed_dep,as_o_S)
 
+# Compile NASM assembly sources as well (.asm)
+
+quiet_cmd_nasm_o_asm = NASM $(quiet_modtag) $@
+cmd_nasm_o_asm 	 	 = $(NASM) $(nasm_flags) -o $@ $<
+
+$(obj)/%.o: $(src)/%.asm FORCE
+	$(call if_changed,nasm_o_asm)
+
+# End of NASM rules
+
 targets += $(real-objs-y) $(lib-y)
 targets += $(extra-y) $(MAKECMDGOALS) $(always)
 
