Link HypoV binary as a usable boot target for SYSLINUX, fixes #20

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -33,4 +33,4 @@
 
 # Let clean descend into subdirs
 #subdir-	+= basic kconfig package selinux
-subdir-	+= basic kconfig
+subdir-y	+= basic kconfig install_stage0 fat32_read
