Make stack size a configuration option

--- a/Kconfig
+++ b/Kconfig
@@ -14,5 +14,7 @@ config CROSS_COMPILE
 	  need to set this unless you want the configured kernel build
 	  directory to select the cross-compiler automatically.
 
+source "boot/Kconfig"
 source "lib/Kconfig"
+
 # TODO
