--- a/.config
+++ b/.config
@@ -3,3 +3,13 @@
 # HypoV Configuration
 #
 CONFIG_CROSS_COMPILE=""
+
+#
+# Boot configuration
+#
+CONFIG_STACK_SIZE=4096
+
+#
+# Library settings
+#
+CONFIG_PRINTF_BUFFER_SIZE=512
