--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -2,4 +2,6 @@
 # Automatically generated make config: don't edit
 # HypoV Configuration
 #
+CONFIG_STACK_SIZE=4096
+CONFIG_PRINTF_BUFFER_SIZE=512
 CONFIG_CROSS_COMPILE=""
