Fix script makefile cflags

--- a/scripts/Makefile.host
+++ b/scripts/Makefile.host
@@ -91,7 +91,7 @@ obj-dirs += $(host-objdirs)
 # Handle options to gcc. Support building with separate output directory
 
 _hostc_flags   = $(HOSTCFLAGS)   $(HOST_EXTRACFLAGS)   \
-                 $(HOSTCFLAGS_$(basetarget).o) -Iinclude
+                 $(HOSTCFLAGS_$(basetarget).o) 
 _hostcxx_flags = $(HOSTCXXFLAGS) $(HOST_EXTRACXXFLAGS) \
                  $(HOSTCXXFLAGS_$(basetarget).o)
 
