--- a/.config
+++ b/.config
@@ -10,6 +10,15 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_STACK_SIZE=4096
 
 #
+# Debug Console
+#
+
+#
+# Memory-mappings
+#
+CONFIG_NR_MMAP_MAX_ENTRIES=10
+
+#
 # Library settings
 #
 CONFIG_PRINTF_BUFFER_SIZE=512
