--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 before_script:
-    - apt-get update -qq && apt-get -y -qq install build-essential nasm grub-common xorriso
+    - apt-get update -qq && apt-get -y -qq install build-essential nasm grub-common grub-pc-bin xorriso
     - gcc --version
     - nasm -v
     - make -v
