--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -135,7 +135,7 @@ __build: $(builtin-target) $(lib-target) $(extra-y) $(subdir-ym) $(always)
 
 SHARED_FLAGS := -m32 -std=c99 -nostdinc -fno-builtin -fno-stack-protector -fno-unwind-tables
 SHARED_FLAGS += -fno-asynchronous-unwind-tables -ffreestanding -Wl,-melf_i386 -march=i586
-SHARED_FLAGS += -nostartfiles -nodefaultlibs -nostdlib -static
+SHARED_FLAGS += -nostartfiles -nodefaultlibs -nostdlib -static -ggdb
 KBUILD_CFLAGS_KERNEL += $(SHARED_FLAGS)
 
 # Default is built-in, unless we know otherwise
