Kconfig configuration option NR_HV_PAGES added

--- a/.config
+++ b/.config
@@ -19,6 +19,11 @@ CONFIG_STACK_SIZE=4096
 CONFIG_NR_MMAP_MAX_ENTRIES=10
 
 #
+# Hypervisor
+#
+CONFIG_NR_HV_PAGES=16
+
+#
 # Library settings
 #
 CONFIG_PRINTF_BUFFER_SIZE=512
