--- a/sys/Kconfig
+++ b/sys/Kconfig
@@ -2,6 +2,17 @@ menu "Debug Console"
     menu "Memory-mappings" 
         config NR_MMAP_MAX_ENTRIES
             default 10
-            int "Maximum number of regions displayed per page"
+            int "Maximum number of regions displayed on screen"
     endmenu
+endmenu
+
+menu "Hypervisor"
+    config NR_HV_PAGES
+        default 16
+        int "Number of 2MB pages allocated for the hypervisor"
+        ---help---
+            The number of physical memory pages allocated for the core hypervisor.
+            In the default configuration with 16 2MB pages, this will give 32MB of
+            usable memory for all core functionality.
+
 endmenu
