--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -5,5 +5,6 @@
 CONFIG_STACK_SIZE=4096
 CONFIG_NR_HV_PAGES=16
 CONFIG_PRINTF_BUFFER_SIZE=512
+CONFIG_SZ_HV_STACK=8192
 CONFIG_NR_MMAP_MAX_ENTRIES=10
 CONFIG_CROSS_COMPILE=""
