--- a/sys/core/Makefile
+++ b/sys/core/Makefile
@@ -1,6 +1,7 @@
 subdir-ccflags-y := -fPIC
 subdir-ccflags-y += -fvisibility=protected
 subdir-ccflags-y += -m64
+subdir-ccflags-y += -mno-red-zone
 subdir-ldflags-y := -Wl$(comma)-melf_x86_64
 nasmflags-y := -felf64
 
