--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -3,6 +3,7 @@
 # HypoV Configuration
 #
 CONFIG_STACK_SIZE=4096
+CONFIG_HV_OS_STUB=y
 CONFIG_NR_HV_PAGES=16
 CONFIG_PRINTF_BUFFER_SIZE=512
 CONFIG_SZ_HV_STACK=8192
