--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -202,10 +202,10 @@ cmd_as_o_S       = $(CC) $(a_flags) -c -o $@ $<
 $(obj)/%.o: $(src)/%.S FORCE
 	$(call if_changed_dep,as_o_S)
 
-# Compile NASM assembly sources as well (.asm)
+# Compile NASM assembly sources as well (.asm) after preprocessing with CPP
 
 quiet_cmd_nasm_o_asm = NASM$(quiet_modtag) $@
-cmd_nasm_o_asm 	 	 = $(NASM) $(nasm_flags) -o $@ $<
+cmd_nasm_o_asm 	 	 = $(CPREPROC) -D__ASSEMBLY__ $(c_flags) $< | $(NASM) $(nasm_flags) -o $@ $<
 
 $(obj)/%.o: $(src)/%.asm FORCE
 	$(call if_changed,nasm_o_asm)
