Compile and link the C library for each arch (fixes #48)

--- a/lib/lib32/Makefile
+++ b/lib/lib32/Makefile
@@ -1,5 +1,4 @@
 ccflags-y := -m32 -march=i586
 ldflags-y := -Wl$(comma)-melf_i386 
 
-lib-y += print.o
-lib-y += string.o
+include lib/Makefile.objs
