Modify the build system to accomodate XZ :tada:
	* Compress hvcore.elf64 with XZ
	* Build XZ as needed
	* Add KConfig configuration menu and options
	for the compression settings

--- a/sys/Kconfig
+++ b/sys/Kconfig
@@ -6,4 +6,11 @@ menu "Debug Console"
     endmenu
 endmenu
 
-source "sys/core/Kconfig"
+menu "Hypervisor"
+    menu "Compression"
+        source "sys/xz/Kconfig"
+    endmenu
+
+    source "sys/core/Kconfig"
+endmenu
+
