Set up default settings for the new options

--- a/.config
+++ b/.config
@@ -21,6 +21,19 @@ CONFIG_NR_MMAP_MAX_ENTRIES=10
 #
 # Hypervisor
 #
+
+#
+# Compression
+#
+CONFIG_XZ_DEC=y
+CONFIG_XZ_DEC_X86=y
+CONFIG_XZ_DEC_POWERPC=y
+CONFIG_XZ_DEC_IA64=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_BCJ=y
+# CONFIG_XZ_DEC_TEST is not set
 CONFIG_HV_OS_STUB=y
 CONFIG_NR_HV_PAGES=16
 CONFIG_SZ_HV_STACK=8192
