--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -2,10 +2,18 @@
 # Automatically generated make config: don't edit
 # HypoV Configuration
 #
+CONFIG_XZ_DEC_IA64=y
 CONFIG_STACK_SIZE=4096
+CONFIG_XZ_DEC_X86=y
 CONFIG_HV_OS_STUB=y
+CONFIG_XZ_DEC_BCJ=y
+CONFIG_XZ_DEC=y
 CONFIG_NR_HV_PAGES=16
 CONFIG_PRINTF_BUFFER_SIZE=512
+CONFIG_XZ_DEC_POWERPC=y
 CONFIG_SZ_HV_STACK=8192
+CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_ARM=y
 CONFIG_NR_MMAP_MAX_ENTRIES=10
 CONFIG_CROSS_COMPILE=""
+CONFIG_XZ_DEC_ARMTHUMB=y
