Gitlab CI should also copy the hvcore stuff

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,3 +16,5 @@ package:
         - hypov.iso
         - hypov.bin
         - HypoV.map
+        - sys/core/hvcore.elf64
+        - sys/core/hvcore.elf64.xz
