Create i8259 Programmable Interrupt Controller driver

--- a/sys/core/Makefile
+++ b/sys/core/Makefile
@@ -12,6 +12,7 @@ hvobj-y += elf_os_stub.o
 hvobj-y += host_cpu.o
 hvobj-y += host_cpu_ll.o
 hvobj-y += host_int.o
+hvobj-y += host_pic.o
 hvobj-y += int_wrappers.o
 hvobj-y += int_handler.o
 hvobj-y += drivers/
